--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,10 +1,10 @@
 
-<div class="row vh-100">
-        <div class="col col-xxl-2 border">
+<div class="row vh-100" style="width:100%;">
+        <div class="col col-sm-12 col-md-12 col-xxl-2 border c1">
             <button (click)="toggleDisplay()" class="btn btn-warning b1">Surgery</button>
         </div>
         
-        <div class="col col-xxl-10 justify-content-center align-items-center" [hidden]="isDisplay">
+        <div class="col  col-sm-12 col-md-12 col-xxl-10 justify-content-center align-items-center" [hidden]="isDisplay">
 
             <!-- Create suegery content -->
 
