--- a/src/app/create-surgery-page/create-surgery-page.component.css
+++ b/src/app/create-surgery-page/create-surgery-page.component.css
@@ -20,3 +20,26 @@
     font-size: 16px;
     border: none;
   }
+
+  .validateColor{
+    color: red;
+
+  }
+  .table-container {
+    width: 100% !important;
+    overflow-x: scroll;
+    }
+    th, td { min-width: 200px; }
+
+    @media (max-width: 600px) {
+
+      .table-container {
+      width: 100% !important;
+      overflow-x: scroll;
+      }
+      
+      th, td {min-width: 200px; }
+      }
+
+
+     
