--- a/src/app/create/create.component.css
+++ b/src/app/create/create.component.css
@@ -4,7 +4,18 @@
     margin-top: 40px;
 }
 
+@media (max-width: 600px) {
 
+  .c1 {
+     height: 20px;
+  }
+  .b1{
+    width: 100%;
+    border-radius: 0;
+  
+}
+  
+  }
 
 /* .container {
     display: flex;
