--- a/src/app/create-surgery-page/create-surgery-page.component.html
+++ b/src/app/create-surgery-page/create-surgery-page.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container" >
     <div class="heading">Create Surgery</div>
     
     <button type="button" class="btn btn-warning button" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -10,7 +10,7 @@
 
 <div >
   <div class="table-container">
-    <table class="table table-bordered " >
+    <table class="table table-bordered " style="width: 100%;" >
         <thead>
             <tr>
                 <th>Type</th>
@@ -50,7 +50,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="exampleModalLabel">Surgery Details</h1>
-          <button type="button"  class="btn-close" data-bs-dismiss="modal" aria-label="Close" #closeAddExpenseModal (click)="toggleDisplay2()" ></button>
+          <button type="button"  class="btn-close" data-bs-dismiss="modal" aria-label="Close" #closeAddExpenseModal  ></button>
         </div>
         <div class="modal-body">
           
@@ -58,18 +58,18 @@
               <form [formGroup]="bioSection" class="row g-3">
                 <div class="form-group col-xxl-6">
                     <label for="type">Type</label>
-                    <input type="text" class="form-control" id="type" placeholder="Enter type" formControlName="typeControll" [(ngModel)]="type"  name="type" required="true" >
-                    <div class="validateColor" *ngIf="this.bioSection.get('typeControll')?.hasError('required')" [hidden]="isDisplay2">*Type is required</div>
+                    <input type="text" class="form-control" id="type" placeholder="Enter type" formControlName="type" [(ngModel)]="type"  name="type" required="true" >
+                    <!-- <div class="validateColor" *ngIf="this.bioSection.get('typeControll')?.hasError('required')" [hidden]="isDisplay2">*Type is required</div> -->
                 </div>
                 <div class="form-group col-xxl-6">
                     <label for="surgery">Surgery Name</label>
-                    <input type="text" class="form-control" id="surgery" placeholder="Enter surgery name" formControlName="typeControll2" [(ngModel)]="surgeryName"   name="surgeryName" >
-                    <div class="validateColor" *ngIf="this.bioSection.get('typeControll2')?.hasError('required')"  [hidden]="isDisplay2">*SurgeryName is required</div>
+                    <input type="text" class="form-control" id="surgery" placeholder="Enter surgery name" formControlName="surgeryName" [(ngModel)]="surgeryName"   name="surgeryName" >
+                    <!-- <div class="validateColor" *ngIf="this.bioSection.get('typeControll2')?.hasError('required')"  [hidden]="isDisplay2">*SurgeryName is required</div> -->
                 </div>
                 <div class="form-group col-xxl-6 ">
                     <label for="patient">Patient Name</label>
-                    <input type="text" class="form-control" id="patient" placeholder="Enter patient name" formControlName="typeControll3"  [(ngModel)]="patient" name="patient" >
-                    <div class="validateColor" *ngIf="this.bioSection.get('typeControll3')?.hasError('required')" [hidden]="isDisplay2">*Patient name required</div>
+                    <input type="text" class="form-control" id="patient" placeholder="Enter patient name" formControlName="patient"  [(ngModel)]="patient" name="patient" >
+                    <!-- <div class="validateColor" *ngIf="this.bioSection.get('typeControll3')?.hasError('required')" [hidden]="isDisplay2">*Patient name required</div> -->
                   </div>
                 <div class="form-group col-xxl-6">
                     <label for="priority">Priority</label>
@@ -84,7 +84,7 @@
                 <div class="form-group">
                     <label for="options">Tools Required</label>
                    
-                    <div style="width:50%">
+                    <div style="width:100%">
                         <ng-multiselect-dropdown
                             [settings]="dropdownSettings"
                             [data]="toolsList" [(ngModel)]="tools" formControlName="tools">
@@ -92,6 +92,11 @@
                     </div>
 
                 </div>
+                <div class="form-group">
+                  <label for="date">Select Date</label>
+                  <input type="date" class="form-control" id="date" formControlName="surgeryDate" [(ngModel)]="surgeryDate"  name="surgeryDate" >
+                  <!-- <div class="validateColor" *ngIf="this.bioSection.get('typeControll4')?.hasError('required')" [hidden]="isDisplay2">*Date is required</div> -->
+              </div>
                 
              <div class="form-group border">
 
@@ -115,16 +120,12 @@
                       <mat-icon matChipRemove></mat-icon>
                     </mat-chip-option>
                   </mat-chip-listbox>
-                  <div class="validateColor" *ngIf="this.bioSection.get('typeControll5')?.hasError('required')">* Pick Doctor</div>
+                  <!-- <div class="validateColor" *ngIf="this.bioSection.get('typeControll5')?.hasError('required')">* Pick Doctor</div> -->
                   
                   
                 </div >
 
-                <div class="form-group">
-                    <label for="date">Select Date</label>
-                    <input type="date" class="form-control" id="date" formControlName="typeControll4" [(ngModel)]="surgeryDate"  name="surgeryDate" >
-                    <div class="validateColor" *ngIf="this.bioSection.get('typeControll4')?.hasError('required')" [hidden]="isDisplay2">*Date is required</div>
-                </div>
+                
                 <div class="form-group">
                     <label for="notes">Notes</label>
                     <textarea class="form-control" id="notes" rows="3" placeholder="Enter notes" formControlName="notes" [(ngModel)]="notes"  name="notes"></textarea>
@@ -136,8 +137,8 @@
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary"  (click)="formClose()" (click)="toggleDisplay2()">Close</button>
-          <button type="button" class="btn btn-primary" (click)="createSurgery()" (click)="toggleDisplay3()">Create</button>
+          <button type="button" class="btn btn-secondary"  (click)="formClose()" >Close</button>   
+          <button type="button" class="btn btn-primary" (click)="createSurgeryFunction()">Create</button>   
         </div>
       </div>
     </div>
